--- a/style.css
+++ b/style.css
@@ -11,3 +11,11 @@
     border: 2px solid black;
     margin: 0 auto;
 }
+
+.header{
+    height: 50px;
+    width: 90%;
+    background-color: white;
+    margin-top: 10px ;
+    border: 2px solid black;
+}
