--- a/style.css
+++ b/style.css
@@ -26,3 +26,14 @@
     margin-top: 10px ;
     gap: 10px;
 }
+
+button{
+    background-color: white;
+    font-size: 24px;
+    font-weight: 900px;
+    height: 70px;
+    width: 75px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    
+}
