--- a/style.css
+++ b/style.css
@@ -34,6 +34,9 @@ button{
     height: 70px;
     width: 75px;
     box-sizing: border-box;
-    border-radius: 5px;
-    
+    border-radius: 5px;    
+}
+
+.operator{
+    background-color: yellow;
 }
